// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgCviPagination]}
>
  <cvi-vision>
    <cvi-pagination>
      <div
        class="cvi-Pagination cvi-Pagination--noRefinement"
        ng-reflect-ng-class="cvi-Pagination,cvi-Pagination-"
      >
        <ul
          class="cvi-Pagination-list"
        >

          <li
            class="cvi-Pagination-item cvi-Pagination-item--firstPage cvi-Pagination-item--disabled"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               ‹‹
            </a>
          </li>

          <li
            class="cvi-Pagination-item cvi-Pagination-item--previousPage cvi-Pagination-item--disabled"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               ‹
            </a>
          </li>


          <li
            class="cvi-Pagination-item cvi-Pagination-item--nextPage"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               ›
            </a>
          </li>

          <li
            class="cvi-Pagination-item cvi-Pagination-item--lastPage"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               ››
            </a>
          </li>
        </ul>
      </div>
    </cvi-pagination>
  </cvi-vision>
</ng-component>
`;

exports[`Pagination renders with pages in state 1`] = `
<ng-component
  testedWidget={[Function NgCviPagination]}
>
  <cvi-vision>
    <cvi-pagination>
      <div
        class="cvi-Pagination"
        ng-reflect-ng-class="cvi-Pagination,"
      >
        <ul
          class="cvi-Pagination-list"
        >

          <li
            class="cvi-Pagination-item cvi-Pagination-item--firstPage cvi-Pagination-item--disabled"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               ‹‹
            </a>
          </li>

          <li
            class="cvi-Pagination-item cvi-Pagination-item--previousPage cvi-Pagination-item--disabled"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               ‹
            </a>
          </li>

          <li
            class="cvi-Pagination-item cvi-Pagination-item--page cvi-Pagination-item--selected"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               1
            </a>
          </li>
          <li
            class="cvi-Pagination-item cvi-Pagination-item--page"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               2
            </a>
          </li>
          <li
            class="cvi-Pagination-item cvi-Pagination-item--page"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               3
            </a>
          </li>
          <li
            class="cvi-Pagination-item cvi-Pagination-item--page"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               4
            </a>
          </li>
          <li
            class="cvi-Pagination-item cvi-Pagination-item--page"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               5
            </a>
          </li>
          <li
            class="cvi-Pagination-item cvi-Pagination-item--page"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               6
            </a>
          </li>
          <li
            class="cvi-Pagination-item cvi-Pagination-item--page"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               7
            </a>
          </li>

          <li
            class="cvi-Pagination-item cvi-Pagination-item--nextPage"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               ›
            </a>
          </li>

          <li
            class="cvi-Pagination-item cvi-Pagination-item--lastPage"
          >
            <a
              class="cvi-Pagination-link"
              href="null"
            >
               ››
            </a>
          </li>
        </ul>
      </div>
    </cvi-pagination>
  </cvi-vision>
</ng-component>
`;
